# iubh-computer-vision

./: .gitignore  README.md  detr-resnet.py  mask2former.py  pyproject.toml  segformer.py  yolos-small.py  yolos.py
eval/: DetrResnet_total_results.xlsx  Mask2Former_total_results.xlsx  Yolos_total_results.xlsx
eval/2023-07-26 19-13-25/: DetrResnet_results.xlsx  Mask2Former_results.xlsx  Yolos_results.xlsx
eval/2023-07-26 20-17-27/: Mask2Former_results.xlsx
eval/2023-07-26 21-12-53/: DetrResnet_results.xlsx  Yolos_results.xlsx
object_recognition/: basic_run.py  dataset.py  device.py  eval.py  object_recognitiond.py  system_monitor.py  video.py
object_recognition/models/: __init__.py  abstract.py  detr_resnet.py  mask2former.py  yolos.py
object_recognition/schemas/: __init__.py  segment.py
